--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,7 @@
 name: VolcaniaPlugin
 version: 1.0.0
+api-version: '1.19'
+author: glt
 main: fr.volcania.volcaniaplugin.Main
 commands:
   compass:
