--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -7,9 +7,12 @@ commands:
   compass:
     description: Give a compass to the player
     permission: volcaniaplugin.compass
+    aliases: [cmp]
   volcania:
     description: Help the player to start his adventure
     permission: volcaniapluin.volcania
+    aliases: [volca]
   shop:
     description: to buy things
     permission: volcaniaplugin.shop
+    aliases: [admshop, adminshop]
